# Tetris_learner

./: CMakeLists.txt  Tetris_learner  compil.sh  game_manager.cpp  game_manager.h  graphics.cpp  graphics.h  grid.cpp  grid.h  main.cpp  player.cpp  player.h  tetris_ai.h
